Regression: Cavity shading disappears when Xray is enabled #112409

Closed
opened 2023-09-15 12:52:32 +02:00 by Julien Kaspar · 2 comments
Member

System Information
Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-b492f73f87)

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-14 19:20, hash: 4fa4f5432d39
Worked: 3.6

Caused by 85b02b893a

Short description of error
This is a recent regression. When Xray shading is enabled but set to 1.0, Cavity shading options should still be used and displayed in the 3D Viewport.
But currently cavity shading is only used if Xray is completely disabled.

Exact steps for others to reproduce the error

  • Enabled Cavity shading in the 3D viewport shading options
  • Make sure the Xray slider is set to 1.0
  • Toggle Xray shading
**System Information** Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-b492f73f87) **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-14 19:20, hash: `4fa4f5432d39` Worked: 3.6 Caused by 85b02b893a **Short description of error** This is a recent regression. When Xray shading is enabled but set to 1.0, Cavity shading options should still be used and displayed in the 3D Viewport. But currently cavity shading is only used if Xray is completely disabled. **Exact steps for others to reproduce the error** - Enabled Cavity shading in the 3D viewport shading options - Make sure the Xray slider is set to 1.0 - Toggle Xray shading
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-15 12:52:33 +02:00
Iliya Katushenock added the
Interest
EEVEE & Viewport
label 2023-09-15 13:12:02 +02:00
Iliya Katushenock changed title from Cavity shading disappears when Xray is enabled to Regression: Cavity shading disappears when Xray is enabled 2023-09-15 13:12:10 +02:00
Member

Can confirm, suspect 85b02b893a to be the culprit

Can confirm, suspect 85b02b893a6f51c14128deb7f3193a6c41558394 to be the culprit
Member

Yep, looks like this is caused by 85b02b893a (even though enabling Workbench next in e.g. 65f91bd53a didnt have the issue?)

@pragma37 : mind checking?

Yep, looks like this is caused by 85b02b893a (even though enabling Workbench next in e.g. 65f91bd53a4d didnt have the issue?) @pragma37 : mind checking?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-15 15:35:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112409
No description provided.