Fix #112409: Workbench: Cavity disabled when Xray is enabled